1_5/app3/manifests/01_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployment
  namespace: default
  labels:
    app: app3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: app3
          image: "witlab/ingress-training-app3:v0.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            {}
