1_5/app3/manifests/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-service
  namespace: default
  labels:
    app: app3
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: http
      protocol: TCP
      name: https
  selector:
    app: app3
