1_5/app3/manifests/03_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app3-ing
  namespace: default
  labels:
    app: app3
spec:
  tls:
    - hosts:
        - app3.example.com
      secretName: app3-tls-secret
  rules:
    - host: app3.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: app3-service
              servicePort: https
